syntax = "proto3";

package pb;

import "services/posts/post.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";

message Menu {
  int32 id = 1;
  string code = 2;
  optional int32 headerImageId = 3;
}

message ViewMenu {
  int32 id = 1;
  string code = 2;
  optional int32 headerImageId = 3;
  optional string headerImageUrl = 4;
}

message MenuItem {
  int32 id = 1;
  int32 menuId = 2;
  string code = 3;
  string name = 4;
  int32 position = 5;
  optional bool isMain = 6;
  optional int32 descriptionPostId = 7;
}

message MenuItemPost {
  int32 menuItemId = 1;
  int32 postId = 2;
  int32 position = 3;
  DataPost post = 4;
}

message MenuItemEntityGroups {
  int32 menu_id = 1;
  optional int32 menu_item_id = 2;
  int32 entity_group_id = 3;
  int32 position = 4;
}